welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
}while (presence!=1){
	vuBiscuit();
}




def vuBiscuit(){
	var presence : int =0;
	for(k<-1 to 7){
		avance();
		if(estSurBiscuit){
			presence = 1 ;
		}else{
			presence = 0
		}
	}
	for(k<-1 to 7){
		avance();
	}	
	droite();
	avance();
	gauche();
	
}
